# ququ

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  docker-compose.yml  main.js  package.json
.github/workflows/: build.yml
backend/: AGENTS.md  Dockerfile  download_models.py  entrypoint.sh  funasr_server.py  pyproject.toml  requirements.txt
frontend/: .npmrc  AGENTS.md  history.html  index.html  jsconfig.json  main.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preload.js  settings.html  vite.config.js  vitest.config.js
frontend/scripts/: prepare-embedded-python.js
frontend/src/: App.jsx  history.html  history.jsx  index.css  index.html  main.jsx  settings.html  settings.jsx
frontend/src/helpers/: clipboard.js  database.js  environment.js  funasrManager.js  hotkeyManager.js  ipcHandlers.js  keyWatcher.js  logManager.js  tray.js  windowManager.js
frontend/src/hooks/: useHotkey.js  useModelStatus.js  usePermissions.js  useRecording.js  useTextProcessing.js
frontend/test/: App.test.jsx  hotkey-ipc-logic.test.js  keywatcher-logic.test.js  setup.js  useHotkey.test.js  useModelStatus.test.js  usePermissions.test.js  useRecording.test.js
frontend/test/helpers/: mockElectron.js
src/helpers/: funasrManager.js
